# SocketChat

./: .gitignore
client/qt_client/: chatwindow.cpp  chatwindow.hpp  chatwindow.ui  main.cpp  qt_client.pro  qt_client.pro.user.d2c5bee
server/: CMakeLists.txt  logger.cpp  logger.hpp  server.cpp
